<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="end|bottom"
        android:textSize="48sp"
        android:padding="10dp"
        android:background="@color/lightGrey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnEight"
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnNine"
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnDivide"
            android:text="@string/Divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:textSize="30dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSix"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnFive"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnFour"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnAdd"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:textSize="30dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnThree"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnTwo"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnOne"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btnMinus"
            android:text="-"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:textSize="30dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnZero"
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:textSize="30dp"
            />


        <Button
            android:id="@+id/btnClear"
            android:text="CLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onClear"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:text="@string/multi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:textSize="30dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnEqual"
            android:text="@string/Eql"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="4dp"
            android:onClick="onEqual"
            android:textSize="30dp"
            />
        <Button
        android:id="@+id/btnDot"
        android:text="@string/Dot"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:onClick="onDecimalPoint"
        android:textSize="30dp"
        />

    </LinearLayout>

</LinearLayout>